--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
   <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
 </footer>
 
-<script src="script.js"></script>
+<script src="/main/script.js"></script>
 </body>
 </html>
