--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NeoStep Research Peptides</title>
+  <title>NeoStep Labs Research Peptides</title>
   <link rel="stylesheet" href="/main/styles.css">
 </head>
 
@@ -27,7 +27,7 @@
 <!-- NAVIGATION -->
 <header class="navbar">
   <nav class="nav-container">
-    <a href="#" class="logo">NeoStep</a>
+    <a href="/main/" class="logo">NeoStep Labs</a>
     <ul class="nav-links">
       <li><a href="#catalog">Catalog</a></li>
       <li><a href="#about">About</a></li>
@@ -71,12 +71,12 @@
 <!-- CONTACT -->
 <section id="contact" class="contact">
   <h2>Contact</h2>
-  <p>Email: support@neostep.com</p>
+  <p>Email: neosteplabs@gmail.com</p>
 </section>
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
+  <p>© 2025 NeoStep Labs. Research use only. Not for human or veterinary use.</p>
 </footer>
 
 <script src="/main/script.js"></script>
