--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NeoStep Labs Research Peptides</title>
-  <link rel="stylesheet" href="/main/styles.css">
+  <title>NeoStep Research Peptides</title>
+  <link rel="stylesheet" href="/main/styles.css" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 <!-- NAVIGATION -->
 <header class="navbar">
   <nav class="nav-container">
-    <a href="/main/" class="logo">NeoStep Labs</a>
+    <a href="/main/" class="logo">NeoStep</a>
     <ul class="nav-links">
       <li><a href="#catalog">Catalog</a></li>
       <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
   </nav>
 </header>
 
-<!-- HERO SECTION -->
+<!-- HERO -->
 <section class="hero">
   <h1>NeoStep Research Grade Peptides</h1>
   <p>High-purity compounds for in-vitro laboratory research.</p>
@@ -62,7 +62,7 @@
   </div>
 </section>
 
-<!-- CATALOG PLACEHOLDER -->
+<!-- CATALOG -->
 <section id="catalog" class="catalog">
   <h2>Research Peptides</h2>
   <p>Catalog access available to approved members.</p>
@@ -71,12 +71,12 @@
 <!-- CONTACT -->
 <section id="contact" class="contact">
   <h2>Contact</h2>
-  <p>Email: neosteplabs@gmail.com</p>
+  <p>Email: support@neostep.com</p>
 </section>
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 NeoStep Labs. Research use only. Not for human or veterinary use.</p>
+  <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
 </footer>
 
 <script src="/main/script.js"></script>
