--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NeoStep Research Peptides</title>
-  <link rel="stylesheet" href="/main/styles.css" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -13,11 +15,14 @@
 <div id="age-overlay" class="overlay">
   <div class="overlay-content">
     <h2>Age & Research Verification</h2>
-    <p>This website contains research chemicals intended for laboratory use only.</p>
+    <p>
+      This website contains research compounds intended for laboratory and
+      analytical research use only.
+    </p>
     <ul>
       <li>You are 21 years of age or older</li>
       <li>You are a qualified researcher or institution</li>
-      <li>Products are not for human or veterinary use</li>
+      <li>Not for human or veterinary use</li>
     </ul>
     <button onclick="enterSite()">I Agree & Enter</button>
     <button onclick="leaveSite()">Exit</button>
@@ -27,7 +32,7 @@
 <!-- NAVIGATION -->
 <header class="navbar">
   <nav class="nav-container">
-    <a href="/main/" class="logo">NeoStep</a>
+    <a href="./" class="logo">NeoStep</a>
     <ul class="nav-links">
       <li><a href="#catalog">Catalog</a></li>
       <li><a href="#about">About</a></li>
@@ -76,9 +81,12 @@
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
+  <p>
+    © 2026 NeoStep. Research use only. Not for human or veterinary use.
+  </p>
 </footer>
 
-<script src="/main/script.js"></script>
+<!-- JS -->
+<script src="script.js"></script>
 </body>
 </html>
