--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </p>
 
   <form
-    action="https://formspree.io/f/REPLACE_ME"
+    action="https://formspree.io/f/mykdkelj"
     method="POST"
   >
     <input type="hidden" name="form-name" value="NeoStep Member Inquiry">
