--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <nav class="nav-container">
     <a href="./" class="logo">NeoStep</a>
     <ul class="nav-links">
-      <li><a href="#catalog">Catalog</a></li>
+      <li><a href="catalog.html">Catalog</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
