--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <section class="hero">
   <h1>NeoStep Research Grade Peptides</h1>
   <p>High-purity compounds for in-vitro laboratory research.</p>
-  <a href="#catalog" class="btn">Browse Catalog</a>
+  <a href="catalog.html" class="btn">Browse Catalog</a>
 </section>
 
 <!-- ABOUT -->
