--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>NeoStep Research Peptides</title>
 
   <!-- CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
