--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
@@ -25,10 +26,12 @@
 <div id="content"></div>
 
 <footer>
-  <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
+  <div class="footer-container">
+    <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
+  </div>
 </footer>
 
-<!-- ✅ USE COMPAT VERSION (NOT MODULE VERSION) -->
+<!-- Firebase Compat SDK -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
