--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header class="navbar">
-  <nav class="nav-container">
+  <nav class="nav-container centered-nav">
     <a href="#home" class="logo">
       <svg class="logo-icon" viewBox="0 0 100 100">
         <path d="M20 80V20C20 15 25 15 28 20L50 60L72 20C75 15 80 15 80 20V80"
@@ -29,7 +29,6 @@
     <ul class="nav-links">
       <li><a href="#catalog">Catalog</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li id="auth-link"></li>
     </ul>
   </nav>
 </header>
