header change add logo

--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@
 <header class="navbar">
   <nav class="nav-container centered-nav">
     <a href="#home" class="logo">
-      <svg class="logo-icon" viewBox="0 0 100 100">
-        <path d="M20 80V20C20 15 25 15 28 20L50 60L72 20C75 15 80 15 80 20V80"
-          stroke="white"
-          stroke-width="10"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"/>
-      </svg>
-      <span>NeoStep</span>
+      <img src="neostep-logo-white.png" class="header-logo" alt="NeoStep Logo">
     </a>
 
     <ul class="nav-links">
