--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header class="navbar">
-  <nav class="nav-container centered-nav">
+  <nav class="nav-container">
     <a href="#home" class="logo">
       <img src="neostep-logo.png" class="header-logo" alt="NeoStep Logo">
     </a>
@@ -30,15 +30,12 @@
 </main>
 
 <footer class="footer">
-  <div class="footer-container">
-    <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
-  </div>
+  <p>© 2026 NeoStep. Research use only. Not for human or veterinary use.</p>
 </footer>
 
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-
 <script src="script.js"></script>
 
 </body>
