--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <img src="neostep-logo-header.png" class="header-logo" alt="NeoStep Logo">
+    <img src="neostep-logo-header.jpg" class="header-logo" alt="NeoStep Logo">
 
     <ul class="nav-links">
       <li><a href="catalog.html">Catalog</a></li>
@@ -31,7 +31,7 @@
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/ns-rt10.jpg" alt="NS-RT10">
+        <img src="images/ns-rt10.png" alt="NS-RT10">
       </div>
       <h3>NS-RT10</h3>
       <p>Lyophilized research peptide</p>
@@ -39,7 +39,7 @@
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/ns-rt20.jpg" alt="NS-RT20">
+        <img src="images/ns-rt20.png" alt="NS-RT20">
       </div>
       <h3>NS-RT20</h3>
       <p>Lyophilized research peptide</p>
@@ -47,7 +47,7 @@
 
     <div class="product-card">
       <div class="product-image">
-        <img src="images/ns-rt30.jpg" alt="NS-RT30">
+        <img src="images/ns-rt30.png" alt="NS-RT30">
       </div>
       <h3>NS-RT30</h3>
       <p>Lyophilized research peptide</p>
