--- a/catalog.html
+++ b/catalog.html
@@ -12,11 +12,13 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <img src="neostep-logo-header.jpg" class="header-logo" alt="NeoStep Logo">
+    <a href="index.html">
+      <img src="neostep-logo-header.jpg" class="header-logo" alt="NeoStep Logo">
+    </a>
 
     <ul class="nav-links">
       <li><a href="catalog.html">Catalog</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 </header>
