--- a/catalog.html
+++ b/catalog.html
@@ -69,7 +69,7 @@
   <div class="product-grid" id="productGrid">
 
     <div class="product-card" data-name="NS-RT 10mg" data-compound="NS-RT" data-mg="10">
-      <img src="ns-rt1-0.jpg">
+      <img src="ns-r-10.jpg">
       <h3>NS-RT 10mg</h3>
       <p>Research compound</p>
     </div>
