--- a/catalog.html
+++ b/catalog.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research Compound Catalog</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -15,22 +14,27 @@
       <img src="neostep-logo-header.jpg" class="header-logo" alt="NeoStep Logo">
     </a>
 
-    <nav class="nav-right">
-      <ul class="nav-links">
-        <li><a href="catalog.html" class="active">Catalog</a></li>
-        <li><a href="account.html">Account</a></li>
-      </ul>
+    <nav class="nav-links">
+      <a href="catalog.html" class="nav-link active">Catalog</a>
+
+      <div class="profile-menu">
+        <div class="profile-trigger" id="profileTrigger">
+          <span id="userEmail"></span>
+          <span class="caret">▾</span>
+        </div>
+        <div class="dropdown">
+          <a href="account.html">Account</a>
+          <button id="logoutBtn">Logout</button>
+        </div>
+      </div>
     </nav>
   </div>
 </header>
 
 <main id="content">
+  <h1 class="page-title">Research Compound Catalog</h1>
 
-  <section class="hero">
-    <h1>Research Compound Catalog</h1>
-  </section>
-
-  <div class="catalog-filters">
+  <div class="catalog-controls">
     <input type="text" id="searchInput" placeholder="Search compound..." />
     <select id="mgFilter">
       <option value="">All mg</option>
@@ -40,87 +44,31 @@
     </select>
   </div>
 
-  <section class="product-grid" id="productGrid">
-    
+  <div class="product-grid" id="productGrid">
     <div class="product-card" data-name="NS-RT" data-mg="10">
-      <div class="product-image">
-        <img src="images/ns-rt-10.png" alt="NS-RT 10mg">
-      </div>
+      <img src="ns-rt-10.png" alt="">
       <h3>NS-RT 10mg</h3>
       <p>Research compound</p>
     </div>
 
     <div class="product-card" data-name="NS-RT" data-mg="20">
-      <div class="product-image">
-        <img src="images/ns-rt-20.png" alt="NS-RT 20mg">
-      </div>
+      <img src="ns-rt-20.png" alt="">
       <h3>NS-RT 20mg</h3>
       <p>Research compound</p>
     </div>
 
     <div class="product-card" data-name="NS-RT" data-mg="30">
-      <div class="product-image">
-        <img src="images/ns-rt-30.png" alt="NS-RT 30mg">
-      </div>
+      <img src="ns-rt-30.png" alt="">
       <h3>NS-RT 30mg</h3>
       <p>Research compound</p>
     </div>
-
-    <div class="product-card" data-name="NS-TZ" data-mg="10">
-      <div class="product-image">
-        <img src="images/ns-tz-10.png" alt="NS-TZ 10mg">
-      </div>
-      <h3>NS-TZ 10mg</h3>
-      <p>Research compound</p>
-    </div>
-
-    <div class="product-card" data-name="NS-TZ" data-mg="20">
-      <div class="product-image">
-        <img src="images/ns-tz-20.png" alt="NS-TZ 20mg">
-      </div>
-      <h3>NS-TZ 20mg</h3>
-      <p>Research compound</p>
-    </div>
-
-    <div class="product-card" data-name="NS-TZ" data-mg="30">
-      <div class="product-image">
-        <img src="images/ns-tz-30.png" alt="NS-TZ 30mg">
-      </div>
-      <h3>NS-TZ 30mg</h3>
-      <p>Research compound</p>
-    </div>
-
-  </section>
-
+  </div>
 </main>
 
 <footer class="footer">
-  © 2026 NeoStep. Research use only. Not for human or veterinary use.
+  © 2026 NeoStep. Research use only.
 </footer>
 
-<script>
-const searchInput = document.getElementById("searchInput");
-const mgFilter = document.getElementById("mgFilter");
-const cards = document.querySelectorAll(".product-card");
-
-function filterProducts() {
-  const searchValue = searchInput.value.toLowerCase();
-  const mgValue = mgFilter.value;
-
-  cards.forEach(card => {
-    const name = card.dataset.name.toLowerCase();
-    const mg = card.dataset.mg;
-
-    const matchesSearch = name.includes(searchValue);
-    const matchesMg = mgValue === "" || mg === mgValue;
-
-    card.style.display = (matchesSearch && matchesMg) ? "block" : "none";
-  });
-}
-
-searchInput.addEventListener("input", filterProducts);
-mgFilter.addEventListener("change", filterProducts);
-</script>
-
+<script type="module" src="script.js"></script>
 </body>
 </html>
