--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,16 @@
 
     <ul class="nav-links">
       <li><a href="catalog.html" class="active">Catalog</a></li>
-      <li><a href="cart.html">Cart (<span id="cartCount">0</span>)</a></li>
+
+      <li id="cartIcon" style="position:relative; cursor:pointer;">
+        🛒
+        <span id="cartBadge"
+          style="position:absolute; top:-6px; right:-10px;
+          background:#ef4444; color:white; font-size:12px;
+          padding:2px 6px; border-radius:10px; display:none;">
+          0
+        </span>
+      </li>
     </ul>
   </div>
 </header>
@@ -23,92 +32,22 @@
 
 <h1>Research Compound Catalog</h1>
 
-<div class="compound-grid">
-
-  <!-- NS-RT -->
-  <div class="compound-card" data-compound="NS-RT">
-    <img src="images/ns-rt-10.png" class="compound-image">
-    <h2>NS-RT</h2>
-
-    <div class="strength-row" data-strength="10mg" data-price="100">
-      <span>10 mg</span>
-      <span>$100</span>
-      <div class="stepper">
-        <button class="minus">–</button>
-        <span class="qty">0</span>
-        <button class="plus">+</button>
-      </div>
-    </div>
-
-    <div class="strength-row" data-strength="20mg" data-price="180">
-      <span>20 mg</span>
-      <span>$180</span>
-      <div class="stepper">
-        <button class="minus">–</button>
-        <span class="qty">0</span>
-        <button class="plus">+</button>
-      </div>
-    </div>
-
-    <div class="strength-row" data-strength="30mg" data-price="250">
-      <span>30 mg</span>
-      <span>$250</span>
-      <div class="stepper">
-        <button class="minus">–</button>
-        <span class="qty">0</span>
-        <button class="plus">+</button>
-      </div>
-    </div>
-
-    <button class="btn addSelected">Add Selected to Cart</button>
-  </div>
-
-  <!-- NS-TZ -->
-  <div class="compound-card" data-compound="NS-TZ">
-    <img src="images/ns-tz-10.png" class="compound-image">
-    <h2>NS-TZ</h2>
-
-    <div class="strength-row" data-strength="10mg" data-price="110">
-      <span>10 mg</span>
-      <span>$110</span>
-      <div class="stepper">
-        <button class="minus">–</button>
-        <span class="qty">0</span>
-        <button class="plus">+</button>
-      </div>
-    </div>
-
-    <div class="strength-row" data-strength="20mg" data-price="200">
-      <span>20 mg</span>
-      <span>$200</span>
-      <div class="stepper">
-        <button class="minus">–</button>
-        <span class="qty">0</span>
-        <button class="plus">+</button>
-      </div>
-    </div>
-
-    <div class="strength-row" data-strength="30mg" data-price="280">
-      <span>30 mg</span>
-      <span>$280</span>
-      <div class="stepper">
-        <button class="minus">–</button>
-        <span class="qty">0</span>
-        <button class="plus">+</button>
-      </div>
-    </div>
-
-    <button class="btn addSelected">Add Selected to Cart</button>
-  </div>
-
-</div>
+<div id="productContainer" class="product-grid"></div>
 
 </main>
+
+<!-- CART DRAWER -->
+<div id="cartDrawer" class="cart-drawer">
+  <h2>Your Cart</h2>
+  <div id="cartItems"></div>
+  <h3 id="cartTotal">Total: $0</h3>
+  <button id="checkoutBtn" class="btn">Proceed to Checkout</button>
+</div>
 
 <footer class="footer">
   © 2026 NeoStep. Research use only.
 </footer>
 
-<script type="module" src="catalog-cart.js"></script>
+<script type="module" src="catalog.js"></script>
 </body>
 </html>
