--- a/complete-profile.html
+++ b/complete-profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Complete Profile</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <script type="module" src="complete-profile.js"></script>
 </head>
 <body>
