--- a/catalog.html
+++ b/catalog.html
@@ -37,6 +37,7 @@
 </main>
 
 <!-- CART DRAWER -->
+<div id="cartOverlay" class="cart-overlay"></div>
 <div id="cartDrawer" class="cart-drawer">
   <h2>Your Cart</h2>
   <div id="cartItems"></div>
