--- a/catalog.html
+++ b/catalog.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research Compound Catalog</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
 <header class="navbar">
   <div class="nav-container">
-    <a href="index.html">
+    <a href="catalog.html">
       <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
 
@@ -29,27 +32,32 @@
 </header>
 
 <main id="content">
-
-<h1>Research Compound Catalog</h1>
-
-<div id="productContainer" class="product-grid"></div>
-
+  <h1>Research Compound Catalog</h1>
+  <div id="productContainer" class="product-grid"></div>
 </main>
 
-<!-- CART DRAWER -->
+<!-- CART OVERLAY -->
 <div id="cartOverlay" class="cart-overlay"></div>
+
+<!-- CART DRAWER -->
 <div id="cartDrawer" class="cart-drawer">
   <h2>Your Cart</h2>
+
   <div id="cartItems"></div>
+
   <h3 id="cartTotal">Total: $0</h3>
-  <button id="checkoutBtn" class="btn">Proceed to Checkout</button>
+
+  <button id="checkoutBtn" class="btn">
+    Proceed to Checkout
+  </button>
 </div>
 
 <footer class="footer">
   © 2026 NeoStep. Research use only.
 </footer>
 
-<script type="module" src="js/script.js"></script>
+<!-- ONLY LOAD CATALOG LOGIC -->
 <script type="module" src="js/catalog.js"></script>
+
 </body>
 </html>
