--- a/catalog.html
+++ b/catalog.html
@@ -11,20 +11,25 @@
 
 <header class="navbar">
   <div class="nav-container">
-    
+
     <a href="catalog.html">
       <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
 
     <ul class="nav-links">
-      <li><a href="catalog.html" class="active">Catalog</a></li>
+      <li><a href="catalog.html">Catalog</a></li>
       <li><a href="orders.html">Orders</a></li>
 
       <li id="cartIcon" style="position:relative; cursor:pointer;">
         🛒
         <span id="cartBadge">0</span>
       </li>
+
+      <li id="logoutBtn" style="cursor:pointer;">Logout</li>
     </ul>
+
+  </div>
+</header>
 
   </div>
 </header>
